--- a/web/newusertype.xhtml
+++ b/web/newusertype.xhtml
@@ -2,26 +2,20 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:o="http://openfaces.org/">
+      xmlns:p="http://primefaces.org/ui">
 <!--
   Created by IntelliJ IDEA.
   User: tb189431e
   Date: 7/5/13
   Time: 2:04 PM
 -->
-<h:head>
-    <link rel="stylesheet" href="../design/css/custom.css" type="text/css" media="screen,projection"/>
-    <link rel="stylesheet" href="../design/css/menu.css" type="text/css" media="screen,projection"/>
-</h:head>
-<h:body styleClass="body">
+<h:head></h:head>
 
     <f:view>
         <h:form id="newusertypeform">
-            <o:inputText id="usertype" value="#{userTypeBackingBean.description}" />
-            <o:commandButton id="utButton" action="#{userTypeBackingBean.newUserTypeAction}" value="Create Usertype" />
+            <p:inputText id="usertype" value="#{usertypeBackingBean.description}" />
+            <p:commandButton id="utButton" action="#{usertypeBackingBean.newUserTypeAction}" ajax="false" value="Create Usertype" />
         </h:form>
     </f:view>
-</h:body>
 </html>
