--- a/web/users.xhtml
+++ b/web/users.xhtml
@@ -2,7 +2,6 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 <!--
@@ -11,45 +10,42 @@
   Date: 7/5/13
   Time: 2:04 PM
 -->
-<h:head>
-    <link rel="stylesheet" href="../design/css/custom.css" type="text/css" media="screen,projection"/>
-    <link rel="stylesheet" href="../design/css/menu.css" type="text/css" media="screen,projection"/>
-</h:head>
-<h:body styleClass="body">
+<h:head></h:head>
+<h:body>
 
 <f:view>
-    <o:dataTable var="record" value="#{userBackingBean.users}">
-        <o:column>
+    <p:dataTable var="record" value="#{userBackingBean.users}">
+        <p:column>
             <f:facet name="header">
                 <h:outputText value="First Name:" />
             </f:facet>
             <h:outputText value="#{record.fname}" />
-        </o:column>
-        <o:column>
+        </p:column>
+        <p:column>
             <f:facet name="header">
                 <h:outputText value="Last Name:" />
             </f:facet>
             <h:outputText value="#{record.lname}" />
-        </o:column>
-        <o:column>
+        </p:column>
+        <p:column>
             <f:facet name="header">
                 <h:outputText value="Department:" />
             </f:facet>
             <h:outputText value="#{record.department}" />
-        </o:column>
-        <o:column>
+        </p:column>
+        <p:column>
             <f:facet name="header">
                 <h:outputText value="Email:" />
             </f:facet>
             <h:outputText value="#{record.email}" />
-        </o:column>
-        <o:column>
+        </p:column>
+        <p:column>
             <f:facet name="header">
                 <h:outputText value="Phone:" />
             </f:facet>
             <h:outputText value="#{record.phone}" />
-        </o:column>
-    </o:dataTable>
+        </p:column>
+    </p:dataTable>
 </f:view>
 </h:body>
 </html>
