--- a/web/usertypes.xhtml
+++ b/web/usertypes.xhtml
@@ -15,7 +15,7 @@
 <h:head></h:head>
 <f:view>
     <h:form>
-    <p:dataTable id="usertypes" var="record" value="#{usertypeBackingBean.userTypes}" rows="10" liveResize="true" resizableColumns="true">
+    <p:dataTable id="usertypes" var="record" value="#{usertypeBackingBean.userTypes}" liveResize="true" resizableColumns="true">
         <f:facet name="header">
             Questions List
         </f:facet>
