--- a/web/userdetail.xhtml
+++ b/web/userdetail.xhtml
@@ -18,12 +18,12 @@
             <p:dashboard id="dashboard" model="#{userDetailBackingBean.model}">
                 <p:ajax event="reorder" listener="#{dashboardBean.handleReorder}" update="growl" />
                 <p:panel id="userDetails" header="User Details">
-                    <h:outputText value="#{userDetailBackingBean.user.fname}" />&nbsp;<h:outputText value="#{userDetailBackingBean.user.lname}" />
-                    <h:outputText value="#{userDetailBackingBean.user.school}" />
-                    <h:outputText value="#{userDetailBackingBean.user.department}" />
-                    <h:outputText value="#{userDetailBackingBean.user.email}" />
-                    <h:outputText value="#{userDetailBackingBean.user.phone}" />
-
+                    <h:outputLabel value="First Name:" /><h:inputText value="#{userDetailBackingBean.user.fname}" /><br/>
+                    <h:outputLabel value="Last Name:" /><h:inputText value="#{userDetailBackingBean.user.lname}" /><br/>
+                    <h:outputLabel value="School:" /><h:inputText value="#{userDetailBackingBean.user.school}" /><br/>
+                    <h:outputLabel value="Department:" /><h:inputText value="#{userDetailBackingBean.user.department}" /><br/>
+                    <h:outputLabel value="Email:" /><h:inputText value="#{userDetailBackingBean.user.email}" maxlength="40" size="40"/><br/>
+                    <h:outputLabel value="Phone:" /> <p:inputMask value="#{userDetailBackingBean.user.phoneAsString}" mask="(999)999-9999" />
                 </p:panel>
                 <p:panel id="userApplications" header="Applications">
                     <p:dataTable id="appTable" value="#{userDetailBackingBean.user.applicationList}" var="row">
